# MOBSTERm

./: .gitignore  README.md  alpha_prior_mobster.ipynb  beta_parameter_space.ipynb  check_beta_params.ipynb  create_beta_pareto_dataset.py  mobster_mv.py  model_higher_alpha.py  model_learn_probs.py  model_mobster.py  model_mobster_mv.py  model_mobster_mv_orfeo.py  model_mobster_mv_orfeo_RACES.py  model_mobster_mv_orfeo_real.py  model_mobster_parallel.py  model_no_probs.py  multiple_hitch_params.txt  new_model.py  only_betas.ipynb  plot_functions.py  plot_functions_parallel.py  priors.ipynb  prova_branch.txt  pyproject.toml  rRACES_data.ipynb  run.sh  run_cuda.sh  run_gbm.py  run_mobster.py  run_mobster_mv.ipynb  run_mobster_orfeo.py  run_mobster_orfeo_RACES.py  run_mobster_orfeo_real.py  run_new_model.py  setup.py  simple_models.ipynb  test.ipynb  test_log_prob.ipynb  test_package.ipynb  test_parallel.ipynb
.ipynb_checkpoints/: BoundedPareto-checkpoint.py
MOBSTERm/: __init__.py  aux_functions.py  cli.py  create_synthetic_dataset.py  model_mobster.py  model_mobster_parallel.py  plot_functions.py
beta_mv/: beta_mv.py  run_beta_mv.ipynb
data/: gbm.csv  gbm_B7R7.csv  spn04.csv  spn04_new.csv  test_data.csv
examples/: alpha_fixed.ipynb  alpha_fixed_model.py  alpha_prior_mobster.ipynb
html_examples/: 5components_kmeans_weights_init.html  rRACES_kmeans_weights_init.html  rRACEs_no_kmeans_weights_init.html
new_model/: alpha_prior_mobster.ipynb  mobster_mv2.py  model_no_probs.py  plot_functions.py  rRACES_data.ipynb
old_files/: label_switching.ipynb  new_model.py  (+15 more)
(+98 files in other folders)
