[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MOBSTERm"
version = "0.2.0"
description = "Pyro model to perform multivariate subclonal deconvolution"
readme = "README.md"
authors = [
    { name = "Elena Rivaroli", email = "elenarivaroli@gmail.com" }
]
license = { text = "GPL-3.0" }
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10",
    "pandas>=2.2.2",
    "pyro-ppl>=1.9.1",
    "numpy>=1.26.4",
    "scikit-learn>=1.5",
    "torch>=2.3.0",
    "seaborn>=0.13.2",
    "scipy>=1.14.1",
    "argparse",

]

[project.scripts]
MOBSTERm = "MOBSTERm.cli:main"

[tool.setuptools]
packages = ["MOBSTERm"]

[project.urls]
Homepage = "https://github.com/caravagnalab/MOBSTERm"